# terraforma

./: .gitignore  .gitmodules  CMakeLists.txt  Common.props  Debug.props  Release.props  terraforma.sln
documentation/: coding_conventions.md  release.md
documentation/specification/draft_data_formats/: building_map.xml  road_map.xml
documentation/specification/example_input_maps/: README.md
documentation/specification/uml_diagrams/: data_storage.uxf
sample_data/: building_map_512.xml  roadmap_128.xml  roadmap_512.xml
