CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(terraforma)

INCLUDE_DIRECTORIES(libterra/include/)
LINK_DIRECTORIES(lib/)

ADD_SUBDIRECTORY(libterra   ${CMAKE_BINARY_DIR})
ADD_SUBDIRECTORY(fractal    ${CMAKE_BINARY_DIR})
ADD_SUBDIRECTORY(skyscraper ${CMAKE_BINARY_DIR})
ADD_SUBDIRECTORY(wires      ${CMAKE_BINARY_DIR})